--- a/src/app/funds/transaction-history/transaction-history.component.scss
+++ b/src/app/funds/transaction-history/transaction-history.component.scss
@@ -201,3 +201,9 @@
     }
   }
 }
+.dark-theme .transaction__filters .pair-popup__input .wrap-input__input .wrap-input__label{
+      top: -5px;
+    padding: 0 2px;
+    font-size: 10px;
+    line-height: 12px;
+}
