--- a/src/app/popups/recovery-pass/recovery-pass.component.html
+++ b/src/app/popups/recovery-pass/recovery-pass.component.html
@@ -74,12 +74,12 @@
       <h4 class="popup__subtitle" [innerHtml]="afterCaptchaMessage"></h4>
       <hr style="width: 70%;">
       <div class="popup__links-wrap">
-        <a class="popup__link">
+        <p class="popup__link">
           <span>{{"If you haven't received the email, do the following:" | translate}}</span>
           <br>
           <span>{{'Check spam or other folders.' | translate}}<br>{{'Set email address whitelist.' | translate}}</span>
           <!-- {{'How to set?' | translate}} -->
-          <span><br>{{'Check the mail client works normally.' | translate}}</span></a>
+          <span><br>{{'Check the mail client works normally.' | translate}}</span></p>
       </div>
     </ng-template>
 
