--- a/src/app/popups/recovery-pass/recovery-pass.component.scss
+++ b/src/app/popups/recovery-pass/recovery-pass.component.scss
@@ -129,3 +129,11 @@ color: #576E9C;
 		background: #191A39;
 	}
 }
+
+.popup__link{
+	    font-size: 14px;
+    line-height: 20px;
+    cursor: default;
+    text-align: center;
+
+}
