--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -756,10 +756,10 @@
       }
 
       &__searching-items-title {
-        color: $light-grey;
+        color: #525f73;
 
         &:after{
-          background-color: $light-grey;
+          background-color: #525f73;
         }
       }
 
