--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -154,6 +154,7 @@
     vertical-align: middle;
     display: table-cell;
     white-space: nowrap;
+    color: #DEDEFB;
     &--tal {
       text-align: left;
     }
