--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -132,7 +132,7 @@
       background-color: $grey ;
     }
     &__item{
-      color:$grey;
+      color:#a0a0a0;
       &--active{
         color:#fff;
         // &:after{
