--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -87,7 +87,7 @@
         z-index: -1;
         width: 100%;
         height: 1px;
-        background-color: $grey;
+        background-color: #525f73;
       }
 
       .btn {
@@ -235,7 +235,7 @@
       &__filters {
         &:after {
           z-index: 0;
-          background-color: $light-blue;
+          background-color: #525f73;
         }
       }
 
