--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.scss
@@ -102,8 +102,14 @@
 }
 //  -------------------
 .select__searching-item {
+  &:hover{
+    background-color: rgba(53, 124, 225, 0.1);
+    span{
+      color: #237BEF;
+    }
+  }
   span {
-    color: #ccc;
+    color: #000;
   }
 }
 
