--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -122,8 +122,14 @@
 }
 // ---------------------
 .select__searching-item {
+  &:hover{
+    background-color: rgba(53, 124, 225, 0.1);
+    span{
+      color: #237BEF;
+    }
+  }
   span {
-    color: #ccc;
+    color: #000;
   }
 }
 
