--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -133,10 +133,10 @@
             <g clip-path="url(#clip0)">
               <path
               d="M9.0002 9.53152C11.229 9.53152 13.036 7.41659 13.036 4.80773C13.036 1.18995 11.2291 0.0839844 9.0002 0.0839844C6.7712 0.0839844 4.96436 1.18995 4.96436 4.80773C4.9644 7.41659 6.77125 9.53152 9.0002 9.53152Z"
-              fill="#AAB1C4"/>
+              fill="#a0a0a0"/>
               <path
               d="M17.912 16.4849L15.8759 11.8981C15.7827 11.6882 15.6191 11.5142 15.4155 11.4081L12.2555 9.76318C12.1859 9.72698 12.1015 9.73402 12.0388 9.78144C11.1451 10.4574 10.0943 10.8147 9.00005 10.8147C7.90566 10.8147 6.85491 10.4574 5.96117 9.78144C5.89835 9.73402 5.81397 9.72698 5.74429 9.76318L2.58456 11.4081C2.38083 11.5142 2.2174 11.6881 2.12418 11.8981L0.0880542 16.4849C-0.0523244 16.8011 -0.0235536 17.1629 0.16504 17.4529C0.353546 17.7429 0.672576 17.916 1.01849 17.916H16.9815C17.3274 17.916 17.6465 17.7428 17.835 17.4529C18.0235 17.1629 18.0524 16.8009 17.912 16.4849Z"
-              fill="#AAB1C4"/>
+              fill="#a0a0a0"/>
             </g>
             <defs>
               <clipPath id="clip0">
@@ -178,26 +178,26 @@
       </ng-template>
     </div>
 
-    <ul class="menu language">
+    <!-- <ul class="menu language">
       <li class="menu__item menu__item--with-submenu menu__item--disabled">
         <a class="menu__link">
-          <span class="menu__link-text">
+          <span class="menu__link-text"> -->
             <!-- <img class="language__flag" [src]="lang.icon_url" alt="ru"> -->
-            <span>{{lang.fullName}}</span>
+            <!-- <span>{{lang.fullName}}</span>
           </span>
-        </a>
-        <div class="submenu submenu--language">
-          <ul class="menu__list submenu__list submenu__list--language">
+        </a> -->
+        <!-- <div class="submenu submenu--language">
+          <ul class="menu__list submenu__list submenu__list--language"> -->
             <!--<li class="submenu__item" *ngFor="let lang of langArray | excludeByField:'name':lang.name">-->
               <!--<a class="submenu__link" (click)="changeLocalization(lang.name)" >-->
               <!--<img class="language__flag" [src]="lang.icon_url" alt="">-->
               <!--<span class="language__text">{{lang.fullName | translate}}</span>-->
               <!--</a>-->
             <!--</li>-->
-          </ul>
+<!--           </ul>
         </div>
       </li>
-    </ul>
+    </ul> -->
     <div class="translate">
       <button class="translate__trigger">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
