--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -975,10 +975,19 @@
     &__header {
       background-color: #252543;
       transition: .3s;
+      svg{
+        transition: .3s;
+      }
       &:hover{
 
         background-color: #3A3D5B;
+      .widget__controls-close{
+        svg{
+          fill: #fff;
+        }
       }
+      }
+
     }
     &__name {
       color: #A0A0A0;
