--- a/src/assets/scss/pages/_transaction.scss
+++ b/src/assets/scss/pages/_transaction.scss
@@ -62,7 +62,7 @@
         z-index: -1;
         width: 100%;
         height: 1px;
-        background-color: $grey;
+        background-color: #525f73;
       }
     }
     &__search {
@@ -150,7 +150,7 @@
       &__filters {
         &:after {
           z-index: 1;
-          background-color: $light-blue;
+          background-color: #525f73;
         }
       }
       &__datepicker{
