--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -161,6 +161,7 @@
 
           <div class="wrap-input popup__wrap-input">
             <input
+              autofocus
               required
               class="wrap-input__input"
               type="text"
