--- a/src/app/funds/balance/balance-search-mob/balance-search-mob.component.html
+++ b/src/app/funds/balance/balance-search-mob/balance-search-mob.component.html
@@ -22,16 +22,39 @@
   <div class="market-search__content">
     <cdk-virtual-scroll-viewport [style.height.px]="scrollHeight" [itemSize]="30" *ngIf="scrollHeight">
       <table class="table widget__table widget__table--mob">
-        <tbody>
-        <ng-container *cdkVirtualFor="let currency of viewCurrencies">
-          <tr class="table__row table__row--mob " (click)="selectCurrency(currency.id)">
-            <td class="table__cell table__cell--tal">
-              <span>{{currency.name}}</span>
-              <span> "{{currency.description}}"</span>
-            </td>
+        <thead class="table__head">
+          <tr class="table__head-row">
+            <th class="table__cell-head table__cell-head--tal">{{'Currency' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tal">{{'Available balance' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
           </tr>
-          <tr style="height: 10px;"></tr>
-        </ng-container>
+        </thead>
+        <tbody>
+          <ng-container *cdkVirtualFor="let currency of viewCurrencies">
+            <tr class="table__row table__row--mob " (click)="selectCurrency(currency.id)">
+              <td class="table__cell table__cell--tal">
+                <div class="balance__currency">
+                  <div class="balance__currency-icon">
+                    <img [src]="currency.name | getIconUrl:true">
+                  </div>
+                  <div>
+                    <span style="min-width: 70px;">{{currency.name}}</span>
+                    <span class="balance__currency-name">{{currency.description}}</span>
+                  </div>
+                  
+                </div>
+              </td>
+              <td class="table__cell table__cell--tal">
+                <span>{{currency.activeBalance  | roundCurrency:currency.name | formatCurrency}}</span>
+              </td>
+             <!--  <td class="table__cell table__cell--tar">
+                <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount | roundCurrency | formatCurrency}}</div>
+                <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div> -->
+                <!-- <span class="txt-small txt-red">–0.24%</span> -->
+              <!-- </td> -->
+            </tr>
+            <tr style="height: 10px;"></tr>
+          </ng-container>
         </tbody>
       </table>
     </cdk-virtual-scroll-viewport>
