--- a/src/app/funds/balance/balance-search-mob/balance-search-mob.component.scss
+++ b/src/app/funds/balance/balance-search-mob/balance-search-mob.component.scss
@@ -32,3 +32,11 @@
   fill: #4A5D88;
 }
 
+.balance-search{
+  .market-search__top{
+    margin-top: 14px;
+  }
+  .table__cell-head{
+    padding: 8px 0;
+  }
+}
