--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -981,11 +981,11 @@
       &:hover{
 
         background-color: #3A3D5B;
-      .widget__controls-close{
-        svg{
-          fill: #fff;
+        .widget__controls-close{
+          svg{
+            fill: #fff;
+          }
         }
-      }
       }
 
     }
@@ -1367,90 +1367,101 @@ app-embedded-orders-mobile{
     }
     
     .table__cell-head--tal{
-&:first-child{
-    padding-left: 15px;
+      &:first-child{
+        padding-left: 15px;
 
-        }
+      }
     }
     .table__cell--tal{
-        vertical-align: top;
-        
+      vertical-align: top;
+      
     }
     .table__cell{
-              padding: 3px 10px 8px;
-              &--arr-mob{
-padding-right: 19px;
-    padding-left: 5px;
-    }
-              &:first-child{
-                padding-left: 14px;
-              }
+      padding: 3px 10px 8px;
+      &--arr-mob{
+        padding-right: 19px;
+        padding-left: 5px;
+      }
+      &:first-child{
+        padding-left: 14px;
+      }
     }
     .table__date-time{
       div{
         color: #94C2FF;
-    font-size: 10px;
-    line-height: 12px;
+        font-size: 10px;
+        line-height: 12px;
       }
     }
     .widget__tabs{
       margin-right: 0;
       margin-left: 0;
-     justify-content: space-between;
+      justify-content: space-between;
       margin-top: 35px;
-          margin-bottom: 8px;
+      margin-bottom: 8px;
       &::after{
         display: none;
       }
       .tabs__item{
-            padding: 0 12px 9px;
-            margin-right: 0;
-            color: #424D5E;
-            transition: .3s;
-            font-weight: 400;
-            display: flex;
-            align-items: center;
-            &:last-child{
-              padding-right: 27px;
-            }
-            &::before{
-                  border: none;
-                  height: 4px;
-                  width: 100%;
-                  background-color: #237BEF;
-                  opacity: 0;
-                  transition: .3s;
-                }
-            &--active{
-              color: #fff;
+        padding: 0 12px 9px;
+        margin-right: 0;
+        color: #424D5E;
+        transition: .3s;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        &:last-child{
+          padding-right: 27px;
+        }
+        &::before{
+          border: none;
+          height: 4px;
+          width: 100%;
+          background-color: #237BEF;
+          opacity: 0;
+          transition: .3s;
+        }
+        &--active{
+          color: #fff;
               // font-weight: 300;
-                &::before{
-                  opacity: 1;
-                }
-                &::after{
-                  display: none;
-                }
+              &::before{
+                opacity: 1;
+              }
+              &::after{
+                display: none;
+              }
             }
           }
+        }
+      }
     }
-  }
-}
 
-.widget__trading-row{
-  .dropdown__btn.selectedButton{
-    position: relative;
-    &::after{
-      content: "";
-      position: absolute;
-      bottom: -4px;
-      left: 0;
-      width: calc(100% - 16px);
-      top: auto!important;
-      height: 2px;
-      background-color: #237BEF;
-      display: block!important;
-      border: none!important;
+    .widget__trading-row{
+      .dropdown__btn.selectedButton{
+        position: relative;
+        &::after{
+          content: "";
+          position: absolute;
+          bottom: -4px;
+          left: 0;
+          width: calc(100% - 16px);
+          top: auto!important;
+          height: 2px;
+          background-color: #237BEF;
+          display: block!important;
+          border: none!important;
 
+        }
+      }
     }
-  }
-}
+
+    @media(max-width: 1199px){
+      #launcher{
+        width: 0!important;
+        height: 0!important;
+        opacity: 0!important;
+        pointer-events: none!important;
+        overflow: hidden!important;
+        position: absolute;
+      }
+    }
