--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -60,8 +60,10 @@
               </li>
             </ul>
           </div>
+        </ng-container>
         </li>
-        <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated">
+        <li class="menu__item menu__item--with-submenu">
+          <ng-container *ngIf="isAuthenticated">
           <a class="menu__link menu__link--drop">
             <span class="menu__link-text">{{'Orders' | translate}}</span>
           </a>
@@ -80,6 +82,7 @@
                 </li>
               </ul>
             </div>
+          </ng-container>
           </li>
       <!-- <li class="menu__item" routerLinkActive="menu__link--active">
         <a class="menu__link" routerLink="/dashboard">
