--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  // -webkit-backface-visibility: hidden;
+  //   backface-visibility: hidden;
 }
 
 html {
