--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -3,6 +3,9 @@
   /*--- modificators start ---*/
   &--mob {
     display: block;
+    .filters-popup__btn{
+          margin-top: 15px;
+    }
   }
 
   /*--- modificators end ---*/
