--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.scss
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.scss
@@ -154,6 +154,9 @@
   justify-content: center;
   font-size: 16px;
   margin-top: 7px;
+  @media(max-width: 420px){
+    justify-content: space-between;
+  }
 }
 .widget__trading-title{
   font-size: 14px;
