--- a/src/app/funds/balance-details/balance-details.component.html
+++ b/src/app/funds/balance-details/balance-details.component.html
@@ -173,7 +173,7 @@
                (click)="onBuyCurrency(getMarketPair(selectedItem.currencyName))"
             >{{'Sell' | translate}} BTC</a>
           </div> -->
-          <div class="trade-buttons-wr">
+          <!-- <div class="trade-buttons-wr">
             <a
               (click)="onBuyCurrency(getMarketPair(selectedItem.currencyName))"
               class="btn btn--active widget__trading-btn widget__trading-btn--buy"
@@ -182,7 +182,7 @@
               (click)="onBuyCurrency(getMarketPair(selectedItem.currencyName))"
               class="btn btn--active widget__trading-btn widget__trading-btn--sell"
             >Sell {{getMarketPair(selectedItem.currencyName).split('-')[0]}}</a>
-          </div>
+          </div> -->
         </div>
       </ng-container>
     </div>
