--- a/src/app/popups/demo-trading-popup/demo-trading-popup.component.scss
+++ b/src/app/popups/demo-trading-popup/demo-trading-popup.component.scss
@@ -9,7 +9,7 @@
   text-align: center;
   max-width: 580px;
   margin: 16px auto 0;
-  color: #4B4B4B;
+      color: #DEDEFB;
 }
 .btn{
   margin-top: 24px;
