--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -331,7 +331,8 @@
       }
     }
     &__row-mob-line{
-      background: linear-gradient(to right,#21417D 0%, #191A39 100%);
+      background: rgba(35, 123, 239, 0.15);
+
     }
   }
 }
