--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -268,7 +268,7 @@
       </svg>
     </div>
     <div class="trading-notification__text">
-      <div class="trading-notification__title">{{showLimit(createdOrder.baseType, true)}} {{createdOrder.orderType}} {{' Order created!' | translate}}</div>
+      <div class="trading-notification__title">{{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order created!' | translate}}</div>
       <!-- <p>{{'Status:' | translate}} {{message}}</p> -->
       <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
@@ -292,7 +292,7 @@
       </svg>
     </div>
     <div class="trading-notification__text">
-      <div class="trading-notification__title">{{showLimit(createdOrder.baseType, true)}} {{createdOrder.orderType}} {{' Order not created!' | translate}}</div>
+      <div class="trading-notification__title">{{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order not created!' | translate}}</div>
       <!-- <p> {{'Status:' | translate}} {{message}}</p> -->
       <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
