--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -74,7 +74,7 @@
             ></app-price-input>
           </div>
         </div>
-        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue !== 'STOP_LIMIT'}">
+        <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue !== baseType.STOP_LIMIT}">
           <div class="wrap-input widget__input no-line">
             <app-price-input
             [placeholder]="translateService.instant('Stop limit')"
@@ -167,7 +167,7 @@
           ></app-price-input>
         </div>
       </div>
-      <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue !== 'STOP_LIMIT'}">
+      <div class="row row--jcsb widget__trading-row  input-row" [ngClass]="{'d-none': dropdownLimitValue !== baseType.STOP_LIMIT}">
         <div class="wrap-input widget__input no-line">
           <app-price-input
           [placeholder]="translateService.instant('Stop limit')"
