--- a/src/app/funds/transaction-history/transaction-history.component.scss
+++ b/src/app/funds/transaction-history/transaction-history.component.scss
@@ -207,3 +207,18 @@
     font-size: 10px;
     line-height: 12px;
 }
+
+// TEMP STYLES
+.wrap-input__label {
+  top: 15px;
+  left: 17px;
+  font-size: 14px;
+  &.select-input_label {
+    top: -5px;
+    padding: 0 2px;
+    font-size: 10px;
+    line-height: 12px;
+    z-index: 100;
+    background-color: #191A39;
+  }
+}
