--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -63,3 +63,9 @@
 @import "pages/footer-pages";
 @import "pages/dashboard/_orders";
 
+// ieo
+@import "pages/ieo/ieo-first-screen.scss";
+@import "pages/ieo/_ieo-comunity.scss";
+@import "pages/ieo/_ieo-requirements.scss";
+@import "pages/ieo/_ieo_how_it_work.scss";
+@import "pages/ieo/_ieo-info.scss";
