--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -64,10 +64,10 @@
       </li>
       <li class="menu__item menu__item--with-submenu">
         <ng-container *ngIf="isAuthenticated">
-        <a class="menu__link menu__link--drop">
-          <span class="menu__link-text">{{'Orders' | translate}}</span>
-        </a>
-        <!-- <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a> -->
+          <a class="menu__link menu__link--drop">
+            <span class="menu__link-text">{{'Orders' | translate}}</span>
+          </a>
+          <!-- <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a> -->
           <div class="submenu">
             <ul class="menu submenu__list">
               <li class="submenu__item">
@@ -84,14 +84,22 @@
           </div>
         </ng-container>
       </li>
-      <!-- <li class="menu__item" routerLinkActive="menu__link--active">
-        <a class="menu__link" routerLink="/dashboard">
-          <span class="menu__link-text">{{'IEO' | translate}}</span>
-        </a>
-      </li> -->
-      <!-- <li class="menu__item" routerLinkActive="menu__link--active">
-
-      </li> -->
+      <li class="menu__item menu__item--with-submenu">
+        <ng-container *ngIf="isAuthenticated">
+          <a class="menu__link menu__link--drop">
+            <span class="menu__link-text">{{'IEO' | translate}}</span>
+          </a>
+          <div class="submenu">
+            <ul class="menu submenu__list">
+              <li class="submenu__item">
+                <a class="submenu__link" routerLink="/ieo">
+                  <span class="menu__link-text">{{'BitTorent' | translate}}</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </ng-container>
+      </li>
     </ul>
     <ul class="community-wr">
       <li class="menu__item menu__item--with-submenu">
@@ -245,9 +253,9 @@
       <div class="account-info account-info--auth" *ngIf="userInfo$ | async">
         <div class="account-info__img account-info__img--auth">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M8.00147 8.48178C9.98264 8.48178 11.5889 6.60185 11.5889 4.28286C11.5889 1.06706 9.98272 0.0839844 8.00147 0.0839844C6.02015 0.0839844 4.41406 1.06706 4.41406 4.28286C4.4141 6.60185 6.02018 8.48178 8.00147 8.48178Z" fill="#666679"/>
-<path d="M15.9218 14.6632L14.1119 10.5861C14.0291 10.3995 13.8837 10.2448 13.7026 10.1505L10.8938 8.68837C10.8319 8.65618 10.7569 8.66244 10.7012 8.7046C9.90674 9.30547 8.97266 9.62307 8.00003 9.62307C7.02724 9.62307 6.09324 9.30547 5.29881 8.7046C5.24297 8.66244 5.16797 8.65618 5.10602 8.68837L2.29738 10.1505C2.11629 10.2448 1.97102 10.3994 1.88816 10.5861L0.0782702 14.6632C-0.0465105 14.9443 -0.0209365 15.2659 0.146702 15.5237C0.314263 15.7814 0.597845 15.9353 0.905319 15.9353H15.0946C15.4021 15.9353 15.6858 15.7814 15.8533 15.5236C16.0209 15.2659 16.0465 14.9441 15.9218 14.6632Z" fill="#666679"/>
-</svg>
+            <path d="M8.00147 8.48178C9.98264 8.48178 11.5889 6.60185 11.5889 4.28286C11.5889 1.06706 9.98272 0.0839844 8.00147 0.0839844C6.02015 0.0839844 4.41406 1.06706 4.41406 4.28286C4.4141 6.60185 6.02018 8.48178 8.00147 8.48178Z" fill="#666679"/>
+            <path d="M15.9218 14.6632L14.1119 10.5861C14.0291 10.3995 13.8837 10.2448 13.7026 10.1505L10.8938 8.68837C10.8319 8.65618 10.7569 8.66244 10.7012 8.7046C9.90674 9.30547 8.97266 9.62307 8.00003 9.62307C7.02724 9.62307 6.09324 9.30547 5.29881 8.7046C5.24297 8.66244 5.16797 8.65618 5.10602 8.68837L2.29738 10.1505C2.11629 10.2448 1.97102 10.3994 1.88816 10.5861L0.0782702 14.6632C-0.0465105 14.9443 -0.0209365 15.2659 0.146702 15.5237C0.314263 15.7814 0.597845 15.9353 0.905319 15.9353H15.0946C15.4021 15.9353 15.6858 15.7814 15.8533 15.5236C16.0209 15.2659 16.0465 14.9441 15.9218 14.6632Z" fill="#666679"/>
+          </svg>
 
         </div>
         <div class="account-info__text">
