--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -85,7 +85,7 @@
         </ng-container>
       </li>
       <li class="menu__item menu__item--with-submenu">
-        <ng-container *ngIf="isAuthenticated">
+        <ng-container>
           <a class="menu__link menu__link--drop">
             <span class="menu__link-text">{{'IEO' | translate}}</span>
           </a>
