--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -69,3 +69,4 @@
 @import "pages/ieo/_ieo-requirements.scss";
 @import "pages/ieo/_ieo_how_it_work.scss";
 @import "pages/ieo/_ieo-info.scss";
+@import "pages/ieo/_economic.scss";
