--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -274,6 +274,237 @@
 					</li>
 				</ul>
 			</div>
+			<div class="rating">
+				<div class="rating-title">
+					<h4>Rating for Bittorent</h4>
+				</div>
+				<div class="rating-item-wr">
+					<div class="rating-item">
+						<div class="rating-item-inner">
+							<div class="logo-rating">
+								<img src="assets/img/ieo/icomarks.svg" alt="">
+							</div>
+							<div class="rating-text">
+								<div class="rating-title-item">
+									<span>Rating</span>
+								</div>
+								<div class="rating-value">
+									<span class="current-rating">9.8</span>
+									/
+									<span class="max-rating">10</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="rating-item">
+						<div class="rating-item-inner">
+							<div class="logo-rating">
+								<img src="assets/img/ieo/icobench.svg" alt="">
+							</div>
+							<div class="rating-text">
+								<div class="rating-title-item">
+									<span>Rating</span>
+								</div>
+								<div class="rating-value">
+									<span class="current-rating">4.9</span>
+									/
+									<span class="max-rating">5</span>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+					<div class="rating-item">
+						<div class="rating-item-inner">
+							<div class="logo-rating">
+								<img src="assets/img/ieo/icotop.svg" alt="">
+							</div>
+							<div class="rating-text">
+								<div class="rating-title-item">
+									<span>Rating</span>
+								</div>
+								<div class="rating-value">
+									<span class="current-rating">A2</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			<div class="economics standart-pg">
+				<div class="economics-inner">
+					<div class="text-info-block">
+						<h4>Cerl Token sale and economics</h4>
+					</div>
+					<div class="economics-table">
+						<div class="economics-table-wr">
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Token Sale Start Time</p>
+								</div>
+								<div class="table-item-value">
+									<p>2019/03/19 2:00 PM (UTC)</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Token Sale end Time</p>
+								</div>
+								<div class="table-item-value">
+									<p>When Hard Cap is reached or at 2019/03/24 2:00 PM (UTC)</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Hard Cap</p>
+								</div>
+								<div class="table-item-value">
+									<p>4,000,000 USD</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Total Tocen Supply</p>
+								</div>
+								<div class="table-item-value">
+									<p>10,000,000,000 CERL</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Initial Circulating Supply</p>
+								</div>
+								<div class="table-item-value">
+									<p>20% of Total Token Supply</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Public Sale Token Price</p>
+								</div>
+								<div class="table-item-value">
+									<p>0.0067 USD (price in BNB will be determined on the day of the public sale)</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Launchpad Allocation</p>
+								</div>
+								<div class="table-item-value">
+									<p>597,014,925 CERL (6% of Total Token Supply)</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Public Sale Vesting Period</p>
+								</div>
+								<div class="table-item-value">
+									<p>No vesting period/ no lockup</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>individual Cap</p>
+								</div>
+								<div class="table-item-value">
+									<p>1,500 USD</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>individual Minimum Purchase Amount</p>
+								</div>
+								<div class="table-item-value">
+									<p>20 USD</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Private Sale Token Price</p>
+								</div>
+								<div class="table-item-value">
+									<p>1 CERL = 0.015 USD</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Private Sale Allocation</p>
+								</div>
+								<div class="table-item-value">
+									<p>15.5% of Total Token Supply</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Private Sale Vesting Period</p>
+								</div>
+								<div class="table-item-value">
+									<p>Vesting over 3 mounths</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Seed Sale Token Price</p>
+								</div>
+								<div class="table-item-value">
+									<p>1 CERL = 0.0065 USD</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Seed Sale Allocation</p>
+								</div>
+								<div class="table-item-value">
+									<p>11.5% of Total Token Supply</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Seed Sale Vesting Period</p>
+								</div>
+								<div class="table-item-value">
+									<p>Vesting over 10 mounths</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Token Type</p>
+								</div>
+								<div class="table-item-value">
+									<p>ERC-20</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Token Distribution</p>
+								</div>
+								<div class="table-item-value">
+									<p>Within 15 days after the token sale ends</p>
+								</div>
+							</div>
+							
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="allocation standart-pg">
+				<div class="text-info-block">
+					<h4>Token Allocaation</h4>
+				</div>
+				<div class="allocation-graph" id="allocation-graph">
+					<img src="assets/img/ieo/graph1.png" alt="">
+				</div>
+			</div>
+			<div class="schedule standart-pg">
+				<div class="text-info-block">
+					<h4>Cerl token release schedule</h4>
+				</div>
+				<div class="schedule-graph" id="schedule-graph">
+					<img src="assets/img/ieo/graph2.png" alt="">
+				</div>
+			</div>
 
 		</div>
 	</div>
