task 1754 and withdraw 2fa fix

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -293,8 +293,9 @@
   <div>
     <app-send-money
       *ngIf="showSendMoneyPopup"
-    [showPopup]="showSendMoneyPopup"
-    [optionData]="sendMoneyData"
-    (closeSendMoneyPopup)="openSendMoneyPopup(false)"
+      [showPopup]="showSendMoneyPopup"
+      [optionData]="sendMoneyData"
+      (closeSendMoneyPopup)="openSendMoneyPopup(false)"
+      (toggleBalanceTab)="onSelectTab($event)"
     ></app-send-money>
   </div>
