--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -91,6 +91,7 @@
         *ngIf="step === 4"
         [data]="stepFourData"
         (closeMe)="onCloseSendMoneyPopup()"
+        (toggleBalanceTab)="toggleBalanceTab.emit($event)"
       ></app-send-successful>
 
     </div>
