--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -8,8 +8,9 @@
       <label class="wrap-input__label">{{'Authenticator code' | translate}}</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-       <div class="input-hint-wrapper">
+       <div class="input-hint-wrapper" *ngIf="form.controls['pin'].errors !== null">
         <span class="wrap-input__message">{{subtitleMessage}}</span>
+        <span class="wrap-input__message" *ngIf="!subtitleMessage && form.controls['pin'].errors['required']">{{'Pincode is required.' | translate}}</span>
       </div>
       <!--Input error section ends-->
     </div>
@@ -27,8 +28,9 @@
       <label class="wrap-input__label">{{'Pincode' | translate}}</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-      <div class="input-hint-wrapper">
+      <div class="input-hint-wrapper" *ngIf="form.controls['pin'].errors !== null">
       <span class="wrap-input__message">{{subtitleMessage}}</span>
+        <span class="wrap-input__message" *ngIf="!subtitleMessage && form.controls['pin'].errors['required']">{{'Pincode is required.' | translate}}</span>
       </div>
       <!--Input error section ends-->
     </div>
