--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -1,5 +1,5 @@
 <!--orders-mob start-->
-<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90">
+<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90" maxBufferPx="1">
     <table class="table table--mob open-orders--mob">
       <thead class="table__head">
         <tr class="table__head-row">
