--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -1,4 +1,4 @@
-<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90">
+<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90" maxBufferPx="1">
 
   <table class="table table--mob">
     <thead class="table__head">
@@ -14,6 +14,7 @@
         <th class="table__cell-head table__cell-head--tar">{{'Avg' | translate}}.{{'Price' | translate}}</th>
       </tr>
     </thead>
+
     <!-- t-row start-->
     <tbody class="table__body table__body--none-shadow">
       <ng-container *cdkVirtualFor="let item of historyOrders">
