--- a/src/app/static-pages/contacts/contacts.component.html
+++ b/src/app/static-pages/contacts/contacts.component.html
@@ -14,43 +14,6 @@
         <div class="contacts__info-wrap">
           <div class="contacts__country-wrap">
             <div class="contacts__country">
-              <h6 class="subtitle">{{'China' | translate}}</h6>
-              <ul class="static-pages__list">
-                <li>{{'Representative office location:' | translate}}</li>
-                <p class="static-pages__paragraph contacts__row contacts__row--blue">
-                  <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M12.3331 0H1.66639C0.828292 0 0.142578 0.685714 0.142578 1.52381V12.1905C0.142578 13.0286 0.828292 13.7143 1.66639 13.7143H4.71401L6.99972 16L9.28543 13.7143H12.3331C13.1711 13.7143 13.8569 13.0286 13.8569 12.1905V1.52381C13.8569 0.685714 13.1711 0 12.3331 0ZM6.99972 2.51429C8.14258 2.51429 9.05686 3.42857 9.05686 4.57143C9.05686 5.71429 8.14258 6.62857 6.99972 6.62857C5.85686 6.62857 4.94258 5.71429 4.94258 4.57143C4.94258 3.42857 5.85686 2.51429 6.99972 2.51429ZM11.5711 10.6667H2.42829V9.98095C2.42829 8.45714 5.47591 7.61905 6.99972 7.61905C8.52353 7.61905 11.5711 8.45714 11.5711 9.98095V10.6667Z"/>
-                  </svg>
-                  <span>mr.Fang</span>
-                </p>
-                <p class="static-pages__paragraph contacts__row contacts__row--grey">
-                  <svg width="16" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M6.00039 0C2.88039 0 0.400391 2.48 0.400391 5.6C0.400391 9.76 6.00039 16 6.00039 16C6.00039 16 11.6004 9.76 11.6004 5.6C11.6004 2.48 9.12039 0 6.00039 0ZM6.00039 7.6C4.88039 7.6 4.00039 6.72 4.00039 5.6C4.00039 4.48 4.88039 3.6 6.00039 3.6C7.12039 3.6 8.00039 4.48 8.00039 5.6C8.00039 6.72 7.12039 7.6 6.00039 7.6Z"/>
-                  </svg>
-                  <span>China, Beijing, Chaoyang dstr, Chaoyang rd,
-            <br>
-            Duhui international</span>
-                </p>
-                <p class="static-pages__paragraph contacts__row contacts__row--grey">
-                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M3.2 6.93333C4.44444 9.42222 6.57778 11.4667 9.06667 12.8L11.0222 10.8444C11.2889 10.5778 11.6444 10.4889 11.9111 10.6667C12.8889 11.0222 13.9555 11.2 15.1111 11.2C15.6444 11.2 16 11.5556 16 12.0889V15.1111C16 15.6444 15.6444 16 15.1111 16C6.75556 16 0 9.24444 0 0.888889C0 0.355556 0.355556 0 0.888889 0H4C4.53333 0 4.88889 0.355556 4.88889 0.888889C4.88889 1.95556 5.06667 3.02222 5.42222 4.08889C5.51111 4.35556 5.42222 4.71111 5.24444 4.97778L3.2 6.93333Z"/>
-                  </svg>
-                  <span><a href="tel:+8615313750545">+8615313750545</a></span>
-                </p>
-                <p class="static-pages__paragraph contacts__row contacts__row--grey">
-                  <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M14.4 0.599976H1.6C0.72 0.599976 0 1.31998 0 2.19998V11.8C0 12.68 0.72 13.4 1.6 13.4H14.4C15.28 13.4 16 12.68 16 11.8V2.19998C16 1.31998 15.28 0.599976 14.4 0.599976ZM14.4 3.79998L8 7.79998L1.6 3.79998V2.19998L8 6.19998L14.4 2.19998V3.79998Z"/>
-                  </svg>
-                  <span><a class="email"
-                           href="mailto:fang.chinalisting@exrates.me">fang.chinalisting@exrates.me</a></span>
-                </p>
-              </ul>
-            </div>
-            <div class="contacts__country">
               <h6 class="subtitle">{{'Switzerland' | translate}}</h6>
               <ul class="static-pages__list">
                 <li>{{'Headquarters:' | translate}}</li>
@@ -67,8 +30,8 @@
                       d="M6.00039 0C2.88039 0 0.400391 2.48 0.400391 5.6C0.400391 9.76 6.00039 16 6.00039 16C6.00039 16 11.6004 9.76 11.6004 5.6C11.6004 2.48 9.12039 0 6.00039 0ZM6.00039 7.6C4.88039 7.6 4.00039 6.72 4.00039 5.6C4.00039 4.48 4.88039 3.6 6.00039 3.6C7.12039 3.6 8.00039 4.48 8.00039 5.6C8.00039 6.72 7.12039 7.6 6.00039 7.6Z"/>
                   </svg>
                   <span>Gotthardstrasse 191, Göschenen, CH-6487, Switzerland
-            <br>
-            (c/o MERKURI HOLDING AG)</span>
+                  <br>
+                  (c/o MERKURI HOLDING AG)</span>
                 </p>
                 <p class="static-pages__paragraph contacts__row contacts__row--grey">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -142,6 +105,14 @@
                     d="M14.4 0.599976H1.6C0.72 0.599976 0 1.31998 0 2.19998V11.8C0 12.68 0.72 13.4 1.6 13.4H14.4C15.28 13.4 16 12.68 16 11.8V2.19998C16 1.31998 15.28 0.599976 14.4 0.599976ZM14.4 3.79998L8 7.79998L1.6 3.79998V2.19998L8 6.19998L14.4 2.19998V3.79998Z"/>
                 </svg>
                 <span><a href="mailto:exrates@exrates.me">exrates@exrates.me</a></span>
+              </p>
+              <li>Client service</li>
+              <p class="static-pages__paragraph contacts__row contacts__row--grey">
+                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M14.4 0.599976H1.6C0.72 0.599976 0 1.31998 0 2.19998V11.8C0 12.68 0.72 13.4 1.6 13.4H14.4C15.28 13.4 16 12.68 16 11.8V2.19998C16 1.31998 15.28 0.599976 14.4 0.599976ZM14.4 3.79998L8 7.79998L1.6 3.79998V2.19998L8 6.19998L14.4 2.19998V3.79998Z"/>
+                </svg>
+                <span><a href="mailto:clients@exrates.me">clients@exrates.me</a></span>
               </p>
             </ul>
           </div>
