--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -1,4 +1,4 @@
-<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90" maxBufferPx="1">
+<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90" minBufferPx="0" maxBufferPx="1">
 
   <table class="table table--mob">
     <thead class="table__head">
