--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -70,3 +70,5 @@
 @import "pages/ieo/_ieo_how_it_work.scss";
 @import "pages/ieo/_ieo-info.scss";
 @import "pages/ieo/_economic.scss";
+@import "pages/ieo/_buy-popup.scss";
+@import "pages/ieo/_popup-notification.scss";
