--- a/src/app/ieo/components/popup-buy/popup-buy.component.html
+++ b/src/app/ieo/components/popup-buy/popup-buy.component.html
@@ -1,8 +1,39 @@
-<div class="overlay" *ngIf="show">
-  <div class="popup">
-    <div class="popup__close" (click)="closeMe()"></div>
-    <h6 class="popup__title tnx-head">title</h6>
-    <h4 class="popup__subtitle tnx-description">description</h4>
-    <button class="btn btn--active btn--center" (click)="closeMe()">OK</button>
-</div>
+<div class="overlay ieo-popup-buy" *ngIf="show">
+	<div class="popup">
+		<div class="popup__close" (click)="closeMe()"></div>
+		<div class="ieo-pair">
+			<span>BTT</span>/<span>BNB</span>
+		</div>
+		<h6 class="popup__title tnx-head">1 BTT = 0.0001899 BTC</h6>
+		<div class="balance-txt">
+			<span>Balance: ********* BTC</span>
+		</div>
+		<div class="input-part">
+				<div class="avaliable">Available: 
+					<a class="link" style="pointer-events: auto;">20567.01567 BTT</a>
+				</div>
+			<div class="wrap-input">
+				<app-price-input formcontrolname="amount" name="amount" class="">
+					<input autocomplete="off" class="wrap-input__input ng-pristine ng-touched" name="price" required="" type="text">
+					<label class="wrap-input__label" for="">Quvantity</label>
+					<div class="wrap-input__line ng-star-inserted"></div>
+				</app-price-input>
+				<div class="ng-star-inserted">
+					<div class="input-hint-wrapper">
+						<span class="wrap-input__message--show ng-star-inserted wrap-input__message"> Minimum sum for withdrawal 300.0 ABBC </span>
+					</div>
+				</div>
+			</div>	
+		</div>	
+		<div class="max-value">
+			<a href="#">Max: 166,666,666</a>
+		</div>
+		<div class="pay">
+			<p>Pay: 1.3456 BTC</p>
+		</div>
+		<div class="capcha">
+			capcha
+		</div>
+		<button class="btn btn--active btn--center" (click)="closeMe()">Confirm</button>
+	</div>
 </div>
